feat: Redesign Frontend (#2)
